--- a/views/index.njk
+++ b/views/index.njk
@@ -1,9 +1,6 @@
 {% macro box(name, notifications=[]) %}
   <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
     <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-      <svg class="bi pe-none me-2" width="30" height="24">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
       <span class="fs-5 fw-semibold">{{ name }}</span>
     </a>
     <div id="inbox" class="list-group list-group-flush border-bottom scrollarea">
@@ -22,9 +19,9 @@
     <div class="col-10 mb-1 small">
       <dl class="row">
         <dt class="col-sm-3">Actor</dt>
-        <dd class="col-sm-9">{{notification.actor.id}}</dd>
+        <dd class="col-sm-9">{{ notification.actor.id }}</dd>
         <dt class="col-sm-3">Object</dt>
-        <dd class="col-sm-9">{{notification.object.value}}</dd>
+        <dd class="col-sm-9">{{ notification.object.value }}</dd>
       </dl>
     </div>
   </a>
@@ -36,8 +33,7 @@
     <meta charset="utf-8">
     <meta
     name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!-- this is a link to the css file -->
-    <link
-    rel="stylesheet" href="/style.css"/> <!-- remember to include custom fonts - if you are using them -->
+    <link rel="stylesheet" href="/style.css"/> <!-- remember to include custom fonts - if you are using them -->
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -49,24 +45,50 @@
   </head>
   <body>
     <!-- do you recognize Bootstrap classes? -->
-    <main class="container">
-      <h1>Bootstrap demo</h1>
-      <div class="d-flex flex-nowrap">
-        {{ box("Inbox", inbox) }}
-        <div class="b-example-divider b-example-vr"></div>
-        {{ box("Outbox", outbox) }}
+    <main class="d-flex flex-nowrap">
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+          <span class="fs-4">Data Node</span>
+        </a>
+        <hr>
+        <div class="container py-5 h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-12 col-xl-4">
+              <div class="card" style="border-radius: 15px;">
+                <div class="card-body text-center">
+                  <div class="mt-3 mb-4">
+                    <img
+                      src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
+                      class="rounded-circle img-fluid"
+                      style="width: 100px;"/>
+                  </div>
+                  <h4 class="mb-2">Julie L. Arsenault</h4>
+                  <p class="text-muted mb-4">@Programmer
+                    <span class="mx-2">|</span>
+                    <a href="#!">mdbootstrap.com</a>
+                  </p>
+                  <button type="button" class="btn btn-primary btn-rounded btn-lg">
+                    Message now
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="b-example-divider b-example-vr"></div>
+      {{ box("Inbox", inbox) }}
+      <div class="b-example-divider b-example-vr"></div>
+      {{ box("Outbox", outbox) }}
     </main>
-    <div>
-      <!-- Optional JavaScript -->
-      <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
-    </body>
+    <!-- Optional JavaScript -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+      integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+      integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+      crossorigin="anonymous"></script>
   </body>
 </html>
