--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -22,3 +22,6 @@ h1, h2, h3, h4
     border-left-width: medium
     border-width: 1px 0
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15)
+
+.pod
+    border:  solid #7C4DFF 4px
