--- a/views/index.njk
+++ b/views/index.njk
@@ -48,7 +48,7 @@
     <main class="d-flex flex-nowrap">
       <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-          <span class="fs-4">Data Node</span>
+          <span class="fs-4">{{ type }}</span>
         </a>
         <hr>
         {% include "profile.njk" %}
