--- a/views/pod.njk
+++ b/views/pod.njk
@@ -1,18 +1,13 @@
 <div class="row d-flex justify-content-center align-items-center h-100">
-    <div class="col-md-12 col-xl-4">
-        <div class="card pod" style="border-radius: 15px;">
-            <div class="card-body text-center">
-                <div class="mt-3 mb-4">
-                    <img
-                        src="https://solidproject.org/assets/img/solid-emblem.svg"
-                        class="rounded-circle img-fluid"
-                        style="width: 100px;"/>
-                </div>
-                <h4 class="mb-2">Julie L. Arsenault</h4>
-                <p class="text-muted mb-4">
-                    <a href="#!">mdbootstrap.com</a>
-                </p>
+    <div class="card pod" style="border-radius: 15px;">
+        <div class="card-body text-center">
+            <div class="mt-3 mb-4">
+                <img src="https://solidproject.org/assets/img/solid-emblem.svg" class="rounded-circle img-fluid" style="width: 100px;"/>
             </div>
+            <h4 class="mb-2">Pod {{ podUrl }}</h4>
+            <p class="text-muted mb-4">
+                <a href="#!">{{ inboxUrl }}</a>
+            </p>
         </div>
     </div>
 </div>
